# sand-box

./: GEMINI.md  mini_datadog.db
.gemini/agents/: agile-coach.md  architect.md  db-tuner.md  engineer.md  engineering_manager.md  product-manager.md  product_manager.md  qa-engineer.md  release-manager.md  release_manager.md  security-researcher.md  senior-engineer.md  software-architect.md  sre-specialist.md
.gemini/skills/release-manager/: SKILL.md
.github/: pull_request_template.md
mini-datadog/: .gitignore  CONTRIBUTING.md  README.md
mini-datadog/docs/: api_schema.md  architecture.md  design_guidelines.md  detailed_design.md  documentation_plan.md  poc_report.md  project_plan.md  requirements.md  style_guide_docs.md  user_review_plan.md  vv_report_phase3.md
mini-datadog/docs/adr/: 0001-datastore-selection.md  0002-realtime-communication.md  0003-frontend-architecture.md  0004-approve-duckdb-selection.md  0005-data-retention-strategy.md  0006-single-binary-distribution.md  0007-ui-ux-stack.md  README.md
mini-datadog/docs/api/: api_reference.md
mini-datadog/docs/architecture/: internal_design.md
mini-datadog/docs/setup/: environment_setup.md  user_guide.md
mini-datadog/server/: Cargo.toml  mini_datadog.db.wal
mini-datadog/server/src/: auth.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
mini-datadog/server/tests/: cleanup_test.rs  integration_test.rs  performance_test.rs
mini-datadog/web/: package-lock.json  package.json  tsconfig.json
mini-datadog/web/src/app/: globals.css  layout.tsx  page.tsx
mini-datadog/web/src/app/search/: page.tsx
(+1 files in other folders)
