[package]
name = "mini-datadog-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
duckdb = { version = "1.1", features = ["bundled", "chrono", "json", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
serde_urlencoded = "0.7.1"
rust-embed = "8.0"
mime_guess = "2.0"

[dev-dependencies]
axum-test = "15.0"
tempfile = "3.8"
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.4", features = ["util"] }
